examples/alb-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: alb-ingress-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: myapp
